frontend/test/should_pass/basic_014.grg
rule r {
	x : Node;

	replace {
		x --> y : Node;
	}
}

