frontend/test/should_fail/inh_attrib_003.grg
using inh_attrib_model_003;

rule r {

	replace {
	}
}

